--- a/GhasreMobile/Views/Account/CodePassword.cshtml
+++ b/GhasreMobile/Views/Account/CodePassword.cshtml
@@ -1,28 +1,32 @@
 ﻿
 @{
     ViewData["Title"] = "Index";
+    ViewData["Image"] = "/st/r/Entry_1.png";
     Layout = "_AccountLayout.cshtml";
 }
 
 <div class="form-block col">
 
     <h3 class="uk-margin-remove-bottom">
-        بازیابی رمز عبور
+        کد را وارد کنید
     </h3>
 
     <p class="uk-margin-bottom uk-margin-small-top text-2">
-        برای تغییر رمز عبور، شماره تلفن خود را وارد کنید
+        کد تغییر رمز عبور به شماره شما ارسال گردید
     </p>
 
     <div class="fg-col">
-        <label class="fg-label">شماره تلفن</label>
+        <label class="fg-label">کد</label>
         <input class="entry" type="tel" value="" />
         <span class="text-danger"></span>
     </div>
 
+    <div class="fg-col">
+        <a href="/Account/ForgotPassword">ارسال دوباره کد تغییر رمز عبور</a>
+    </div>
+
     <div class="actions gap-t">
-        <a href="/Account" class="btn btn-link">بازگشت</a>
-        <button class="btn btn-primary">ثبت</button>
+        <button class="btn btn-primary">تایید</button>
     </div>
 
 </div>
