--- a/GhasreMobile/wwwroot/css/Controls.css
+++ b/GhasreMobile/wwwroot/css/Controls.css
@@ -719,7 +719,9 @@ input:not(input[type=checkbox]):not(input[type=radio]) {
       .header .bottom nav a:hover, .header .bottom nav button:hover {
         color: #96027E; }
     .header .bottom .profile {
-      margin-right: auto; }
+      margin-right: auto;
+      background-color: transparent;
+      border: 0; }
       .header .bottom .profile span {
         color: #333; }
       .header .bottom .profile .uk-icon {
@@ -908,24 +910,28 @@ input:not(input[type=checkbox]):not(input[type=radio]) {
           height: 20px;
           width: 20px; } }
 
-@media only screen and (max-width: 532px) {
+@media only screen and (max-width: 590px) {
   .header .bottom nav a:nth-last-child(1) {
     display: none; } }
 
-@media only screen and (max-width: 496px) {
+@media only screen and (max-width: 540px) {
   .header .bottom nav a:nth-last-child(2) {
     display: none; } }
 
-@media only screen and (max-width: 432px) {
+@media only screen and (max-width: 496px) {
   .header .bottom nav a:nth-last-child(3) {
     display: none; } }
 
-@media only screen and (max-width: 356px) {
+@media only screen and (max-width: 432px) {
   .header .bottom nav a:nth-last-child(4) {
     display: none; } }
 
-@media only screen and (max-width: 280px) {
+@media only screen and (max-width: 356px) {
   .header .bottom nav a:nth-last-child(5) {
+    display: none; } }
+
+@media only screen and (max-width: 280px) {
+  .header .bottom nav a:nth-last-child(6) {
     display: none; } }
 
 @media only screen and (max-width: 512px) {
@@ -1099,8 +1105,13 @@ input:not(input[type=checkbox]):not(input[type=radio]) {
   display: flex;
   flex-direction: row-reverse;
   border-bottom: 1px solid #e9e9e9;
-  position: relative;
-  padding: 12px; }
+  position: relative; }
+  @media only screen and (min-device-width: 420px) {
+    .product-express .head {
+      padding: 12px; } }
+  @media only screen and (max-device-width: 420px) {
+    .product-express .head {
+      padding: 8px; } }
   .product-express .head h3 {
     color: #333;
     font-size: 20px;
@@ -1133,9 +1144,14 @@ input:not(input[type=checkbox]):not(input[type=radio]) {
 
 .product-express .body {
   position: relative;
-  padding: 12px;
   display: flex;
   flex-direction: column; }
+  @media only screen and (min-device-width: 420px) {
+    .product-express .body {
+      padding: 12px; } }
+  @media only screen and (max-device-width: 420px) {
+    .product-express .body {
+      padding: 8px; } }
   .product-express .body .star {
     position: absolute;
     left: 12px;
@@ -1396,6 +1412,15 @@ footer {
     display: block; }
   .hide-on-threshold {
     display: none; } }
+
+.g-1 {
+  grid-gap: 6px; }
+
+.g-2 {
+  grid-gap: 8px; }
+
+.g-3 {
+  grid-gap: 12px; }
 
 #offCanvas a {
   display: flex;
