--- a/GhasreMobile/wwwroot/css/Controls.scss
+++ b/GhasreMobile/wwwroot/css/Controls.scss
@@ -643,6 +643,8 @@ $background-highlight: #eee;
 
         .profile {
             margin-right: auto;
+            background-color: transparent;
+            border: 0;
 
             span {
                 color: $Text;
@@ -852,7 +854,9 @@ $background-highlight: #eee;
     }
 }
 
-@media only screen and (max-width: 532px) {
+//-
+
+@media only screen and (max-width: 590px) {
     .header {
         .bottom {
             nav {
@@ -864,8 +868,7 @@ $background-highlight: #eee;
     }
 }
 
-//-
-@media only screen and (max-width: 496px) {
+@media only screen and (max-width: 540px) {
     .header {
         .bottom {
             nav {
@@ -877,7 +880,7 @@ $background-highlight: #eee;
     }
 }
 
-@media only screen and (max-width: 432px) {
+@media only screen and (max-width: 496px) {
     .header {
         .bottom {
             nav {
@@ -889,7 +892,7 @@ $background-highlight: #eee;
     }
 }
 
-@media only screen and (max-width: 356px) {
+@media only screen and (max-width: 432px) {
     .header {
         .bottom {
             nav {
@@ -901,11 +904,23 @@ $background-highlight: #eee;
     }
 }
 
-@media only screen and (max-width: 280px) {
+@media only screen and (max-width: 356px) {
     .header {
         .bottom {
             nav {
                 a:nth-last-child(5) {
+                    display: none;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 280px) {
+    .header {
+        .bottom {
+            nav {
+                a:nth-last-child(6) {
                     display: none;
                 }
             }
@@ -1562,6 +1577,18 @@ footer {
     .hide-on-threshold {
         display: none;
     }
+}
+
+.g-1 {
+    grid-gap: 6px;
+}
+
+.g-2 {
+    grid-gap: 8px;
+}
+
+.g-3 {
+    grid-gap: 12px;
 }
 
 
