--- a/GhasreMobile/wwwroot/css/_colors.scss
+++ b/GhasreMobile/wwwroot/css/_colors.scss
@@ -41,8 +41,16 @@ $mat-background: #fff;
 }
 
 @mixin mat-padding() {
-    padding: 12px;
+
+    @media only screen and (min-device-width : 420px) {
+        padding: 12px;
+    }
+
+    @media only screen and (max-device-width : 420px) {
+        padding: 8px;
+    }
 }
+
 
 $mat-border-color: #e9e9e9;
 
