--- a/GhasreMobile/wwwroot/css/pages/forum.css
+++ b/GhasreMobile/wwwroot/css/pages/forum.css
@@ -84,32 +84,36 @@ backdrop-filter: saturate(80%);
   display: grid;
   grid-template-columns: auto 42px;
   min-height: 50px; }
-  .forum-block .content {
-    padding: 12px; }
-    .forum-block .content .forum-body {
-      margin-top: 8px;
-      display: flex;
-      flex-direction: column; }
-      .forum-block .content .forum-body .image-container {
-        max-height: 52vh;
-        display: flex; }
-        .forum-block .content .forum-body .image-container img {
-          height: 100%;
-          margin: auto;
-          -o-object-fit: cover;
-          object-fit: cover;
-          -o-object-position: center;
-          object-position: center; }
-      .forum-block .content .forum-body p {
-        margin-bottom: 0;
-        color: #666;
-        font-size: 14px; }
-    .forum-block .content .action {
-      display: flex;
-      flex-direction: row;
-      grid-column-gap: 4px; }
-      .forum-block .content .action span {
-        color: #666; }
+  @media only screen and (min-device-width: 420px) {
+    .forum-block .content {
+      padding: 12px; } }
+  @media only screen and (max-device-width: 420px) {
+    .forum-block .content {
+      padding: 8px; } }
+  .forum-block .content .forum-body {
+    margin-top: 8px;
+    display: flex;
+    flex-direction: column; }
+    .forum-block .content .forum-body .image-container {
+      max-height: 52vh;
+      display: flex; }
+      .forum-block .content .forum-body .image-container img {
+        height: 100%;
+        margin: auto;
+        -o-object-fit: cover;
+        object-fit: cover;
+        -o-object-position: center;
+        object-position: center; }
+    .forum-block .content .forum-body p {
+      margin-bottom: 0;
+      color: #666;
+      font-size: 14px; }
+  .forum-block .content .action {
+    display: flex;
+    flex-direction: row;
+    grid-column-gap: 4px; }
+    .forum-block .content .action span {
+      color: #666; }
   .forum-block .controls {
     background-color: #FCFCFC;
     border-left: 1px solid #e9e9e9;
