--- a/GhasreMobile/wwwroot/css/pages/index.css
+++ b/GhasreMobile/wwwroot/css/pages/index.css
@@ -82,8 +82,13 @@ backdrop-filter: saturate(80%);
   border-radius: 4px 4px 4px 4px;
   -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
-  box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
-  padding: 12px; }
+  box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px; }
+  @media only screen and (min-device-width: 420px) {
+    .categories {
+      padding: 12px; } }
+  @media only screen and (max-device-width: 420px) {
+    .categories {
+      padding: 8px; } }
   .categories li {
     display: flex;
     flex-direction: column; }
@@ -127,9 +132,14 @@ backdrop-filter: saturate(80%);
   display: grid; }
 
 .questions ul li {
-  padding: 12px;
   margin-top: 0 !important;
   border-bottom: solid #e9e9e9 1px; }
+  @media only screen and (min-device-width: 420px) {
+    .questions ul li {
+      padding: 12px; } }
+  @media only screen and (max-device-width: 420px) {
+    .questions ul li {
+      padding: 8px; } }
 
 .main-contact {
   display: grid;
