--- a/GhasreMobile/wwwroot/css/pages/product.css
+++ b/GhasreMobile/wwwroot/css/pages/product.css
@@ -109,8 +109,13 @@ backdrop-filter: saturate(80%);
             margin: auto; }
     .pr-image .foot {
       display: flex;
-      flex-direction: row;
-      padding: 12px; }
+      flex-direction: row; }
+      @media only screen and (min-device-width: 420px) {
+        .pr-image .foot {
+          padding: 12px; } }
+      @media only screen and (max-device-width: 420px) {
+        .pr-image .foot {
+          padding: 8px; } }
       .pr-image .foot .action {
         border: 1px #e9e9e9 solid;
         -moz-border-radius: 4px 4px 4px 4px;
@@ -142,8 +147,13 @@ backdrop-filter: saturate(80%);
         border-radius: 4px 4px 4px 4px; }
   .pr-title {
     background-color: #F5F6F7;
-    padding: 12px;
     grid-area: title; }
+    @media only screen and (min-device-width: 420px) {
+      .pr-title {
+        padding: 12px; } }
+    @media only screen and (max-device-width: 420px) {
+      .pr-title {
+        padding: 8px; } }
   .pr-content {
     grid-area: content;
     min-height: 150px;
@@ -201,6 +211,86 @@ backdrop-filter: saturate(80%);
     grid-area: specs;
     min-height: 50px;
     width: 180px; }
+
+@media only screen and (max-width: 824px) {
+  .pr {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+    grid-template-areas: "title" "image" "specs" "content"; }
+    .pr-specs {
+      width: auto; } }
+
+@media only screen and (max-device-width: 420px) {
+  .pr-title {
+    background-color: #F5F6F7;
+    grid-area: title; } }
+  @media only screen and (max-device-width: 420px) and (min-device-width: 420px) {
+    .pr-title {
+      padding: 12px; } }
+  @media only screen and (max-device-width: 420px) and (max-device-width: 420px) {
+    .pr-title {
+      padding: 8px; } }
+
+@media only screen and (max-device-width: 420px) {
+    .pr-title h1 {
+      font-size: 16px; }
+  .pr-content {
+    grid-area: content;
+    min-height: 150px;
+    grid-gap: 8px; }
+    .pr-content .colours {
+      display: flex;
+      flex-direction: column; }
+      .pr-content .colours .grid {
+        margin-top: 6px;
+        display: flex;
+        flex-direction: row-reverse;
+        grid-gap: 10px;
+        -ms-flex-wrap: wrap;
+        -webkit-flex-wrap: wrap;
+        flex-wrap: wrap; }
+        .pr-content .colours .grid li .clr {
+          border: 1px solid #e9e9e9;
+          padding: 6px 8px;
+          display: flex;
+          flex-direction: row;
+          -moz-border-radius: 4px 4px 4px 4px;
+          -webkit-border-radius: 4px 4px 4px 4px;
+          border-radius: 4px 4px 4px 4px; }
+          .pr-content .colours .grid li .clr span {
+            color: #666;
+            font-size: 12px; }
+          .pr-content .colours .grid li .clr strong {
+            width: 18px;
+            height: 18px;
+            margin-left: 6px;
+            -moz-border-radius: 1000px 1000px 1000px 1000px;
+            -webkit-border-radius: 1000px 1000px 1000px 1000px;
+            border-radius: 1000px 1000px 1000px 1000px; }
+    .pr-content .price {
+      display: flex;
+      flex-direction: column; }
+      .pr-content .price .discount {
+        color: #FF5A64;
+        text-decoration: line-through;
+        font-size: 20px; }
+      .pr-content .price .actual {
+        display: flex;
+        flex-direction: row-reverse;
+        color: #333;
+        font-size: 24px;
+        margin-top: 0px; }
+        .pr-content .price .actual .t {
+          color: #333;
+          font-size: 13px;
+          margin-top: auto;
+          margin-bottom: 5px;
+          margin-right: 4px; }
+  .pr-specs {
+    background-color: transparent;
+    grid-area: specs;
+    min-height: 50px; } }
 
 .cart {
   display: flex;
