--- a/GhasreMobile/wwwroot/css/pages/product.scss
+++ b/GhasreMobile/wwwroot/css/pages/product.scss
@@ -17,7 +17,6 @@
     &-image {
         grid-area: image;
 
-
         .head {
             .fractional {
                 display: block;
@@ -168,6 +167,106 @@
         width: $specs-width;
     }
 }
+
+@media only screen and (max-width: 824px) {
+
+    .pr {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto auto;
+        grid-template-areas: "title" "image" "specs" "content";
+
+        &-specs {
+            width: auto;
+        }
+    }
+}
+
+@media only screen and (max-device-width : 420px) {
+    .pr {
+        &-title {
+            background-color: #F5F6F7;
+            @include mat-padding;
+            grid-area: title;
+
+            h1 {
+                font-size: 16px;
+            }
+        }
+
+        &-content {
+            grid-area: content;
+            min-height: 150px;
+            grid-gap: 8px;
+
+            .colours {
+                @include column;
+
+                .grid {
+                    margin-top: 6px;
+                    @include row-reverse;
+                    grid-gap: 10px;
+                    -ms-flex-wrap: wrap;
+                    -webkit-flex-wrap: wrap;
+                    flex-wrap: wrap;
+
+                    li {
+                        .clr {
+                            border: 1px solid $mat-border-color;
+                            padding: 6px 8px;
+                            @include row;
+                            @include border-def-radius;
+
+                            span {
+                                color: $Text-2;
+                                font-size: 12px;
+                            }
+
+                            strong {
+                                width: 18px;
+                                height: 18px;
+                                margin-left: 6px;
+                                @include border-circle;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .price {
+                @include column;
+
+                .discount {
+                    color: $danger;
+                    text-decoration: line-through;
+                    font-size: 20px;
+                }
+
+                .actual {
+                    @include row-reverse;
+                    color: $Text;
+                    font-size: 24px;
+                    margin-top: 0px;
+
+                    .t {
+                        color: $Text;
+                        font-size: 13px;
+                        margin-top: auto;
+                        margin-bottom: 5px;
+                        margin-right: 4px;
+                    }
+                }
+            }
+        }
+
+        &-specs {
+            background-color: transparent;
+            grid-area: specs;
+            min-height: 50px;
+        }
+    }
+}
+
 
 .cart {
     @include row-reverse;
