--- a/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
@@ -125,7 +125,7 @@
                 </form>
                 <hr />
                 <label class="mt-3 uk-text-bold">افزودن عکس به گالری تصاویر</label>
-                <form action="/file-upload"
+                <form action="Upload/UploadGalleryImage"
                       class="dropzone col-md-7 uk-border-rounded bg-light"
                       id="my-awesome-dropzone">
                 </form>
