--- a/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model DataLayer.Models.TblProduct
 @{
     ViewData["Title"] = "افزودن محصول";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -7,7 +7,13 @@
 <div class="row flex-div">
     <div class="col-md-12 flex-div pb-3 pt-3">
 
-        <div class="card flex-div border-0 main-shadow">
+        <form asp-action="Create" asp-controller="Product" asp-area="Admin" class="card flex-div border-0 main-shadow"
+              data-ajax="true"
+              data-ajax-method="POST"
+              data-ajax-mode="replace"
+              data-ajax-complete="EndCatagoryCreate()"
+              data-ajax-update="#ajaxresult">
+            @Html.AntiForgeryToken()
             <div class="card-body flex">
                 <ul uk-accordion class="bg-costum mt-3 pt-3 pb-3 uk-text-small uk-border-rounded">
                     <li class="col-md-4">
@@ -25,121 +31,135 @@
                         </div>
                     </li>
                 </ul>
+                <input type="hidden" asp-for="CatagoryId" />
+                <span asp-validation-for="CatagoryId"></span>
                 <hr />
-                <form>
-                    <div class="form-row">
-                        <div class="form-group col-md-3">
-                            <select class="form-control form-control-sm">
-                                <option>برند</option>
-                                <option>برند 1</option>
-                                <option>برند 2</option>
-                                <option>برند 3</option>
-                            </select>
-                        </div>
+                <div class="form-row">
+                    <div class="form-group col-md-3">
+                        <select asp-for="BrandId" class="form-control form-control-sm">
+                            @{
+                                IEnumerable<DataLayer.Models.TblBrand> Brands = ViewBag.Brands;
+                            }
+                            <option value="0">لطفا برند خود را مشخص کنید</option>
+                            @foreach (var item in Brands)
+                            {
+                                <option value="@item.BrandId">@item.Name</option>
+                            }
+                        </select>
+                        <input type="hidden" asp-for="BrandId" />
+                        <span asp-validation-for="BrandId"></span>
                     </div>
-                    <div class="form-row mt-3">
-                        <div class="form-group col-md-3">
-                            <label>نام محصول</label>
-                            <input class="form-control form-control-sm" placeholder="مثال : شارژر">
-                        </div>
-                        <div class="form-group col-md-2">
-                            <label>قیمت</label>
-                            <input class="form-control form-control-sm" placeholder="مثال : 80000 تومان">
-                        </div>
-                        <div class="form-group col-md-2">
-                            <label>درصد تخفیف</label>
-                            <input class="form-control form-control-sm" placeholder="مثال : 10">
-                        </div>
+                </div>
+                <div class="form-row mt-3">
+                    <div class="form-group col-md-3">
+                        <label>نام محصول</label>
+                        <input asp-for="Name" class="form-control form-control-sm" placeholder="مثال : شارژر">
                     </div>
-                    <div class="custom-file col-md-7 mt-3">
-                        <input type="file" class="custom-file-input form-control form-control-sm">
-                        <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر اصلی</label>
+                    <div class="form-group col-md-2">
+                        <label>قیمت</label>
+                        <input asp-for="PriceBeforeDiscount" class="form-control form-control-sm" placeholder="مثال : 80000 تومان">
                     </div>
-                    <div class="form-row mt-3">
-                        <div class="form-group col-md-2">
-                            <label>تعداد</label>
-                            <input class="form-control form-control-sm" placeholder="مثال : 20">
-                        </div>
-                        <div class="form-group col-md-3">
-                            <label>متن جستجو</label>
-                            <input class="form-control form-control-sm" placeholder="مثال : ...">
-                        </div>
-                        <div class=" col-md-2 mt-4 pt-3 mr-3">
-                            <input type="checkbox"> فروش اقساطی
-                        </div>
+                    <div class="form-group col-md-2">
+                        <label>درصد تخفیف</label>
+                        <input asp-for="PriceAfterDiscount" maxlength="2" class="form-control form-control-sm" placeholder="مثال : 10">
                     </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <input type="text" value="" data-role="tagsinput" id="tags" class="form-control" placeholder="کلمات کلیدی">
-                        </div>
+                </div>
+                <div class="custom-file col-md-7 mt-3">
+                    <input asp-for="MainImage" type="file" class="custom-file-input form-control form-control-sm">
+                    <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر اصلی</label>
+                </div>
+                <div class="form-row mt-3">
+                    <div class="form-group col-md-2">
+                        <label>تعداد</label>
+                        <input asp-for="Count" class="form-control form-control-sm" placeholder="مثال : 20">
                     </div>
-                    <hr />
-                    <label class="uk-text-bold">رنگ:</label>
-                    <div class="form-row ">
-                        <input class="mt-2" type="checkbox">
-                        <label class="mr-2"> مشکی </label>
-                        <div class=" uk-border-rounded mr-2 color-box" style="background:#000000;"></div>
+                    <div class="form-group col-md-3">
+                        <label>متن جستجو</label>
+                        <input asp-for="SearchText" class="form-control form-control-sm" placeholder="مثال : ...">
                     </div>
-                    <div class="form-row ">
-                        <input class="mt-2" type="checkbox">
-                        <label class="mr-2"> قرمز </label>
-                        <div class=" uk-border-rounded mr-2 color-box" style="background:#e62424;"></div>
+                    <div class=" col-md-2 mt-4 pt-3 mr-3">
+                        <input asp-for="IsFractional" type="checkbox"> فروش اقساطی
                     </div>
-                    <div class="form-row ">
-                        <input class="mt-2" type="checkbox">
-                        <label class="mr-2"> سفید </label>
-                        <div class=" uk-border-rounded mr-2 color-box" style="background:#ffffff;border:1px solid #808080;"></div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <input type="text" value="" data-role="tagsinput" id="tags" class="form-control" placeholder="کلمات کلیدی">
                     </div>
-                    <div class="form-row ">
-                        <input class="mt-2" type="checkbox">
-                        <label class="mr-2"> سرمه ای </label>
-                        <div class=" uk-border-rounded mr-2 color-box" style="background:#225275;"></div>
+                </div>
+                <hr />
+                <label class="uk-text-bold">رنگ:</label>
+                <div class="form-row ">
+                    <input class="mt-2" type="checkbox">
+                    <label class="mr-2"> مشکی </label>
+                    <div class=" uk-border-rounded mr-2 color-box" style="background:#000000;"></div>
+                </div>
+                <div class="form-row ">
+                    <input class="mt-2" type="checkbox">
+                    <label class="mr-2"> قرمز </label>
+                    <div class=" uk-border-rounded mr-2 color-box" style="background:#e62424;"></div>
+                </div>
+                <hr />
+                <div class="form-row mt-3">
+                    <div class="form-group col-md-5">
+                        <label class="uk-text-bold">افزودن ویژگی</label>
+                        <input class="form-control form-control-sm" placeholder="مثال : حافظه داخلی">
                     </div>
-                    <div class="form-row mt-3">
-                        <div class="form-group col-md-2">
-                            <label class="uk-text-bold">انتخاب از سایر رنگ ها:</label>
-                            <input type="color" class="form-control form-control-sm" name="Color">
-                        </div>
+                    <div class="form-group col-md-2 mt-md-4 pt-2">
+                        <a href="#" class="btn btn-info btn-sm">افزودن</a>
                     </div>
-                    <hr />
-                    <div class="form-row mt-3">
-                        <div class="form-group col-md-5">
-                            <label class="uk-text-bold">افزودن ویژگی</label>
-                            <input class="form-control form-control-sm" placeholder="مثال : حافظه داخلی">
-                        </div>
-                        <div class="form-group col-md-2 mt-md-4 pt-2">
-                            <a href="#" class="btn btn-info btn-sm">افزودن</a>
-                        </div>
-                    </div>
-                    <div class="form-inline col-md-7">
-                        <label class="ml-5">عنوان ویژگی:</label>
-                        <input class="form-control form-control-sm" placeholder="مثال : 32 گیگابایت">
-                    </div>
-                    <hr />
-                    <div class="mt-3">
-                        <textarea id="DescriptionShortHtml" name="Mytext"></textarea>
-                    </div>
-                    <div class="mt-3">
-                        <textarea id="DescriptionLongHtml" name="Mytext"></textarea>
-                    </div>
-                </form>
+                </div>
+                <div class="form-inline col-md-7">
+                    <label class="ml-5">عنوان ویژگی:</label>
+                    <input class="form-control form-control-sm" placeholder="مثال : 32 گیگابایت">
+                </div>
+                <hr />
+                <div class="mt-3">
+                    <textarea id="DescriptionShortHtml" name="Mytext"></textarea>
+                </div>
+                <div class="mt-3">
+                    <textarea id="DescriptionLongHtml" name="Mytext"></textarea>
+                </div>
                 <hr />
                 <label class="mt-3 uk-text-bold">افزودن عکس به گالری تصاویر</label>
-                <form action="Upload/UploadGalleryImage"
-                      class="dropzone col-md-7 uk-border-rounded bg-light"
-                      id="my-awesome-dropzone">
-                </form>
+                <div class="dropzone jumbotron dz-clickable ui-sortable col-md-7 uk-border-rounded bg-light" id="adropzone"><div class="dz-default dz-message"><span>تصاویر خود را بگیرید و در این محل رها کنید و یا بر روی این محل کلیک نمایید</span></div></div>
             </div>
             <div class="card-footer bg-white">
-                <a onclick="BtnAddPackage()" class="btn btn-success btn-sm text-white pull-right ml-4">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></a>
+                <button type="submit" class="btn btn-success btn-sm text-white pull-right ml-4">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
             </div>
-        </div>
+        </form>
     </div>
 </div>
 @section Script{
-<script src="~/js/bootstrap-tagsinput.js"></script>
-<script src="~/js/dropzone.js"></script>
-<script>
-    
-</script>
+    <script src="~/js/bootstrap-tagsinput.js"></script>
+    <script src="~/js/dropzone.js"></script>
+    <style>
+        .dz-error-message {
+            display: none !important;
+        }
+    </style>
+    <script>
+        $("#adropzone").dropzone({
+            url: "/file/post", paramName: "file", // The name that will be used to transfer the file
+            maxFilesize: 1, // MB
+            addRemoveLinks: true,
+            acceptedFiles: "image/x-png,image/gif,image/jpeg",
+            autoProcessQueue: false,
+            removedfile: function (file) {
+                file.previewElement.remove();
+                UIkit.notification({ message: "فایل با موفقیت حذف شد" });
+            },
+            complete: function (file) {
+                if (file.size > 1000000) {
+                    UIkit.notification({ message: "حجم فایل بیش از اندازه میباشد لطفا بیشتر از 3 مگابایت وارد نکنید" });
+                    file.previewElement.remove();
+                }
+                if (file.type != 'image/jpeg' && file.type != 'image/png') {
+                    UIkit.notification({ message: "فرمت فایل باید jpg یا png و یا jpeg باشد" });
+                    file.previewElement.remove();
+                    return false;
+                }
+
+            }
+        });
+    </script>
 }
