--- a/GhasreMobile/Views/Forum/_ThreadBlock.cshtml
+++ b/GhasreMobile/Views/Forum/_ThreadBlock.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="forum-block">
     <div class="content">
         <div class="rowr">
-            <h5>نام این پست یا همان تاپیک</h5>
+            <a href="/Forum/ForumView"><h5 class="link-text" >نام این پست یا همان تاپیک</h5></a>
             <div class="rowr uk-margin-auto-right">
                 <span class="uk-margin-small-left text-2">مهتاب دادسرشت</span>
                 <span class="text-2">1399/01/05</span>
@@ -17,7 +17,7 @@
                 <span uk-icon="ratio:.8;icon:chatbox-ellipses-outline"></span>
                 <span> 13 </span>
             </span>
-            <a class="link-text" href="" uk-icon="ratio:.8;icon:arrow-redo-outline"></a>
+            <span class="link-text" uk-icon="ratio:.8;icon:arrow-redo-outline"></span>
         </div>
     </div>
     <div class="controls">
