--- a/GhasreMobile/Views/Shared/_BlogBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_BlogBlock.cshtml
@@ -10,6 +10,6 @@
     </p>
     <div class="row gap-t">
         <label>1366/04/06</label>
-        <a href="" dir="rtl">بیشتر...</a>
+        <a href="/Blog/ViewBlog" dir="rtl">بیشتر...</a>
     </div>
 </div>
