--- a/GhasreMobile/Views/Shared/_ProductBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_ProductBlock.cshtml
@@ -7,15 +7,15 @@
         <div class="Stars" style="--rating: @r.Next(0,5)"></div>
     </div>
     <span class="people">(2445)</span>
-    <a href="#" class="link-text">
+    <a href="/Product" class="link-text">
         <img src="@($"/st/r/phones/p{r.Next(1,9)}.jpg")" alt="" width="200" height="200" />
     </a>
-    <a href="#" class="link-text">
+    <a href="/Product" class="link-text">
         <h3 class="name" dir="rtl">
             گوشی موبایل Iphone X دو سیمکارته 256gb پلاس 7 گیگ رم
         </h3>
     </a>
-    <a href="" class="category link-text">دسته بندی</a>
+    <a href="/Search" class="category link-text">دسته بندی</a>
     <span class="discount">
         <span>4,680,000</span>
     </span>
