--- a/GhasreMobile/Views/Account/Index.cshtml
+++ b/GhasreMobile/Views/Account/Index.cshtml
@@ -24,7 +24,14 @@
     </div>
 
     <div class="fg-col">
-        <a href="/Account/ForgotPassword">فراموشی رمز عبور</a>
+        <label class="row uk-margin-auto-left">
+            مرا بخاطر بسپار
+            <input type="checkbox" class="uk-checkbox" />
+        </label>
+    </div>
+
+    <div class="fg-col">
+        <a href="/Account/ForgotPassword">رمز عبور خود را فراموش کرده اید؟</a>
     </div>
 
     <div class="actions gap-t">
