--- a/GhasreMobile/Views/Account/ForgotPassword.cshtml
+++ b/GhasreMobile/Views/Account/ForgotPassword.cshtml
@@ -1,28 +1,32 @@
-﻿
+﻿@model ForgotPasswordVm
 @{
     ViewData["Title"] = "Index";
     Layout = "_AccountLayout.cshtml";
 }
 
-<div class="form-block col">
-
+@section Scripts
+{
+    <partial name="_CaptchaScripts" />
+}
+<form asp-action="ForgotPassword" method="post" asp-area="" class="form-block col">
+    <partial name="_CaptchaInput" />
     <h3 class="uk-margin-remove-bottom">
         بازیابی رمز عبور
     </h3>
 
     <p class="uk-margin-bottom uk-margin-small-top text-2">
-        برای تغییر رمز عبور، شماره تلفن خود را وارد کنید
+        برای بازیابی رمز عبور، شماره تلفن خود را وارد کنید
     </p>
 
     <div class="fg-col">
         <label class="fg-label">شماره تلفن</label>
-        <input class="entry" type="tel" value="" />
-        <span class="text-danger"></span>
+        <input class="entry" type="tel" asp-for="TellNo" />
+        <span class="text-danger" asp-validation-for="TellNo"></span>
     </div>
 
     <div class="actions gap-t">
         <a href="/Login" class="btn btn-link">بازگشت</a>
-        <button class="btn btn-primary">ثبت</button>
+        <button class="btn btn-primary">بازیابی</button>
     </div>
 
-</div>
+</form>
