--- a/GhasreMobile/Views/Account/Register.cshtml
+++ b/GhasreMobile/Views/Account/Register.cshtml
@@ -20,13 +20,13 @@
 
     <div class="fg-col">
         <label class="fg-label">گذر واژه</label>
-        <input class="entry" type="tel" asp-for="Password" placeholder="...." />
+        <input class="entry" type="password" asp-for="Password" placeholder="...." />
         <span class="text-danger" asp-validation-for="Password"></span>
     </div>
 
     <div class="fg-col">
         <label class="fg-label">تکرار گذرواژه</label>
-        <input class="entry" type="tel" asp-for="RePassword" placeholder="...." />
+        <input class="entry" type="password" asp-for="RePassword" placeholder="...." />
         <span class="text-danger" asp-validation-for="RePassword"></span>
     </div>
 
