--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -120,31 +120,84 @@
                     <a href="/Blog">وبلاگ ها</a>
                     <a href="/Gallery">گالری</a>
                 </nav>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    @if (User.Claims.Last().Value == "user")
+                    {
+                        <a href="" class="profile">
+                            <span>پروفایل</span>
+                            <span uk-icon="person-circle-outline"></span>
+                        </a>
 
-                <a href="" class="profile">
-                    <span>پروفایل</span>
-                    <span uk-icon="person-circle-outline"></span>
-                </a>
+                        <div uk-drop="boundary: .profile; pos:bottom-left; offset: 20; mode: hover,click">
+                            <div class="mat-card">
+                                <ul class="col g-2">
+                                    <li>
+                                        <a class="link-text" href="">پروفایل</a>
+                                    </li>
+                                    <li>
+                                        <a class="link-text" href="">سبد خرید</a>
+                                    </li>
+                                    <li>
+                                        <a class="link-text" href="/LogOut">خروج</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    }
+                    else if (User.Claims.Last().Value == "employee")
+                    {
+                        <a href="" class="profile">
+                            <span>پروفایل</span>
+                            <span uk-icon="person-circle-outline"></span>
+                        </a>
 
-                <div uk-drop="boundary: .profile; pos:bottom-left; offset: 20; mode: hover,click">
-                    <div class="mat-card">
-                        <ul class="col g-2">
-                            <li>
-                                <a class="link-text" href="">پروفایل</a>
-                            </li>
-                            <li>
-                                <a class="link-text" href="">سبد خرید</a>
-                            </li>
-                            <li>
-                                <a class="link-text" href="">خروج</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                        <div uk-drop="boundary: .profile; pos:bottom-left; offset: 20; mode: hover,click">
+                            <div class="mat-card">
+                                <ul class="col g-2">
+                                    <li>
+                                        <a class="link-text" href="">پروفایل</a>
+                                    </li>
+                                    <li>
+                                        <a class="link-text" href="/LogOut">خروج</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    }
+                    else if (User.Claims.Last().Value == "admin")
+                    {
+                        <a href="" class="profile">
+                            <span>پروفایل</span>
+                            <span uk-icon="person-circle-outline"></span>
+                        </a>
+
+                        <div uk-drop="boundary: .profile; pos:bottom-left; offset: 20; mode: hover,click">
+                            <div class="mat-card">
+                                <ul class="col g-2">
+                                    <li>
+                                        <a class="link-text" href="">پروفایل</a>
+                                    </li>
+                                    <li>
+                                        <a class="link-text" href="/LogOut">خروج</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    }
+                }
+                else
+                {
+                    <a href="/Login" class="profile">
+                        <span>ورود</span>
+                        <span uk-icon="person-circle-outline"></span>
+                    </a>
+                }
+
 
                 @*<a href="" class="enter">
-                                ورود / ثبت نام
-                    </a>*@
+                    ورود / ثبت نام
+        </a>*@
 
             </div>
         </div>
