--- a/GhasreMobile/Views/Account/ChangePassword.cshtml
+++ b/GhasreMobile/Views/Account/ChangePassword.cshtml
@@ -1,30 +1,31 @@
-﻿
+﻿@model ChangePasswordVm
 @{
     ViewData["Title"] = "Index";
     ViewData["Image"] = "/st/r/Entry_1.png";
     Layout = "_AccountLayout.cshtml";
 }
 
-<div class="form-block col">
-
+<form asp-action="ChangePassword" method="post" asp-area="" class="form-block col">
+    <input class="input" asp-for="Auth" type="hidden" />
+    <input class="input" asp-for="Tell" type="hidden" />
     <h3 class="uk-margin-medium-bottom">
         تغییر رمز عبور
     </h3>
 
     <div class="fg-col">
         <label class="fg-label">رمز عبور جدید</label>
-        <input class="entry" type="tel" value="" />
-        <span class="text-danger"></span>
+        <input class="entry" type="password" asp-for="Password" />
+        <span class="text-danger" asp-validation-for="Password"></span>
     </div>
 
     <div class="fg-col">
         <label class="fg-label">تکرار رمز عبور</label>
-        <input class="entry" type="tel" value="" />
-        <span class="text-danger"></span>
+        <input class="entry" type="password" asp-for="RePassword" />
+        <span class="text-danger" asp-validation-for="RePassword"></span>
     </div>
 
     <div class="actions gap-t">
         <button class="btn btn-primary">تایید</button>
     </div>
 
-</div>
+</form>
