update login and register

--- a/GhasreMobile/Views/Account/Login.cshtml
+++ b/GhasreMobile/Views/Account/Login.cshtml
@@ -48,7 +48,7 @@
     </div>
 
     <div class="fg-col">
-        <a href="/Account/ForgotPassword">رمز عبور خود را فراموش کرده اید؟</a>
+        <a href="/ForgotPassword">رمز عبور خود را فراموش کرده اید؟</a>
     </div>
 
     <div class="actions gap-t">
