--- a/GhasreMobile/Views/Account/Login.cshtml
+++ b/GhasreMobile/Views/Account/Login.cshtml
@@ -43,7 +43,7 @@
     <div class="fg-col">
         <label class="row uk-margin-auto-left">
             مرا بخاطر بسپار
-            <input type="checkbox" class="uk-checkbox" />
+            <input type="checkbox" asp-for="RememberMe" class="uk-checkbox" />
         </label>
     </div>
 
