--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -467,7 +467,7 @@
             </div>
             <hr class="uk-margin-medium-top" />
             <p class="uk-text-center text-4">
-                کلیه حقوق این متعلق به شرکت قصر موبایل می باشد، طراحی و توسعه توسط
+                کلیه حقوق این سایت متعلق به شرکت قصر موبایل می باشد، طراحی و توسعه توسط
                 <strong><a href="https://arvintavco.com">شرکت ایده پرداز آروین تاو</a></strong>
             </p>
         </div>
