--- a/GhasreMobile/Views/Home/Index.cshtml
+++ b/GhasreMobile/Views/Home/Index.cshtml
@@ -143,7 +143,7 @@
         </a>
     </div>
 
-    <ul class="uk-slider-items uk-child-width-1-2 uk-grid">
+    <ul class="uk-slider-items uk-child-width-1-1-at-xs uk-child-width-1-2-at-s uk-child-width-1-2-at-m uk-child-width-1-2-at-l uk-child-width-1-2-at-xl uk-grid">
         <li>
             <partial name="_BlogBlock" />
         </li>
@@ -189,8 +189,10 @@
     <h3>درخواست خدمات درب منزل</h3>
     <p class="text-3">برای درحواست خدمات تعمیراتی و گارانتی درب منزل این فرم را پر کنید </p>
     <div class="col">
-        <div class="rowr uk-child-width-1-2">
-            <div class="fg-col uk-margin-left">
+        <div class="col-at-xs col-at-s rowr-at-m rowr-at-l gap-card
+             rowr-at-xl uk-child-width-1-2-at-m uk-child-width-1-2-at-l uk-child-width-1-2-at-xl
+             uk-child-width-1-1-at-xs uk-child-width-1-1-at-s">
+            <div class="fg-col uk-margin-remove-bottom">
                 <label for="Name" class="fg-label">نام و نام خانوادگی</label>
                 <input id="Name" name="Name" type="text" class="entry" value="" />
                 <span class="text-danger"></span>
@@ -214,7 +216,7 @@
 
 <div class="questions mat-card uk-padding-remove">
     <a href="#faq" name="faq"></a>
-    <h3 class="mat-pad">
+    <h3>
         پاسخ به سوالات شما
     </h3>
     <hr class="uk-margin-remove" />
