--- a/GhasreMobile/wwwroot/css/Controls.css
+++ b/GhasreMobile/wwwroot/css/Controls.css
@@ -340,6 +340,33 @@ input:not(input[type=checkbox]):not(input[type=radio]) {
   border: 0;
   color: #333; }
 
+@media only screen and (max-width: 400px) {
+  .entry {
+    background: transparent;
+    padding: 2px 8px;
+    direction: rtl;
+    min-height: 24px;
+    font-size: 12px;
+    border: 1px #ddd solid;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    border-radius: 4px 4px 4px 4px;
+    -moz-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    transition: all ease 0.3s; }
+    .entry ::placeholder {
+      /* Chrome, Firefox, Opera, Safari 10.1+ */
+      color: #ddd;
+      opacity: 1;
+      /* Firefox */ }
+    .entry :-ms-input-placeholder {
+      /* Internet Explorer 10-11 */
+      color: #ddd; }
+    .entry ::-ms-input-placeholder {
+      /* Microsoft Edge */
+      color: #ddd; } }
+
 .fg-col {
   margin-bottom: 20px;
   display: flex;
@@ -721,9 +748,14 @@ input:not(input[type=checkbox]):not(input[type=radio]) {
         color: #96027E; }
     .header .bottom .profile {
       margin-right: auto;
+      height: 100%;
       background-color: transparent;
       border: 0; }
       .header .bottom .profile span {
+        margin-top: auto !important;
+        margin-bottom: auto !important;
+        vertical-align: central;
+        text-align: center;
         color: #333; }
       .header .bottom .profile .uk-icon {
         margin-left: 4px; }
@@ -996,15 +1028,28 @@ input:not(input[type=checkbox]):not(input[type=radio]) {
   .product img {
     margin: auto;
     margin-top: 8px;
+    margin-bottom: 8px;
     min-height: 92px;
     min-width: 92px;
-    background-color: #efefef; }
+    background-color: #efefef;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -o-object-position: center;
+    object-position: center;
+    max-height: 192px; }
   .product .name {
     color: #333;
     font-size: 14px;
     margin-top: 8px;
-    height: 48px;
-    padding: 0 2px; }
+    margin-bottom: 4px;
+    height: 40px;
+    padding: 0 2px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    /* number of lines to show */
+    -webkit-box-orient: vertical; }
   .product .category {
     color: #999;
     margin-top: 2px;
@@ -1032,6 +1077,47 @@ input:not(input[type=checkbox]):not(input[type=radio]) {
   -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
   box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
   z-index: 50 !important; }
+
+@media only screen and (max-width: 480px) {
+  .product {
+    padding: 6px 4px;
+    margin: 0 4px; }
+    .product .people {
+      margin: 0 auto;
+      font-size: 10px; }
+    .product .name {
+      color: #333;
+      font-size: 11px;
+      margin-top: 8px;
+      margin-bottom: 4px;
+      height: 30px;
+      max-height: 30px;
+      padding: 0 3px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      /* number of lines to show */
+      -webkit-box-orient: vertical; }
+    .product img {
+      margin-top: 4px;
+      margin-bottom: 4px; }
+    .product .category {
+      color: #999;
+      margin-top: 3px;
+      font-size: 10px; }
+    .product .discount {
+      margin-top: 5px;
+      font-size: 14px; }
+    .product .price {
+      margin: 0 auto;
+      margin-top: 2px;
+      display: flex;
+      flex-direction: row;
+      color: #333;
+      font-size: 16px; }
+      .product .price .t {
+        font-size: 9px; } }
 
 .navigation {
   height: 16px; }
@@ -1265,6 +1351,20 @@ input:not(input[type=checkbox]):not(input[type=radio]) {
   color: #ccc;
   margin-right: auto; }
 
+@media only screen and (max-width: 380px) {
+  .blog-block h3 {
+    margin: 5px 0;
+    font-size: 15px; }
+  .blog-block p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    /* number of lines to show */
+    -webkit-box-orient: vertical;
+    font-size: 11px;
+    margin: 0; } }
+
 footer {
   background-color: #222332;
   padding: 30px 0;
@@ -1393,14 +1493,45 @@ footer {
       direction: rtl; }
       #dropbar .uk-container .grid section h4 {
         color: #333; }
+      #dropbar .uk-container .grid section ul {
+        display: flex;
+        flex-direction: column; }
+        #dropbar .uk-container .grid section ul li {
+          height: auto; }
+          #dropbar .uk-container .grid section ul li a {
+            color: #666;
+            -moz-transition: all ease 0.2s;
+            -o-transition: all ease 0.2s;
+            -webkit-transition: all ease 0.2s;
+            transition: all ease 0.2s; }
+          #dropbar .uk-container .grid section ul li a:hover {
+            color: #96027E; }
+
+@media only screen and (max-width: 960px) {
+  #dropbar {
+    height: calc(100vh - 108px);
+    overflow-y: auto !important;
+    direction: rtl; } }
+
+@media only screen and (max-width: 380px) {
+  #dropbar .uk-container .grid {
+    display: grid;
+    grid-template-rows: auto;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(124px, 1fr));
+    -moz-transition: all ease 0.2s;
+    -o-transition: all ease 0.2s;
+    -webkit-transition: all ease 0.2s;
+    transition: all ease 0.2s;
+    direction: rtl; }
+    #dropbar .uk-container .grid section h4 {
+      color: #333;
+      font-size: 15px; }
+    #dropbar .uk-container .grid section ul {
+      display: flex;
+      flex-direction: column; }
       #dropbar .uk-container .grid section ul li a {
-        color: #666;
-        -moz-transition: all ease 0.2s;
-        -o-transition: all ease 0.2s;
-        -webkit-transition: all ease 0.2s;
-        transition: all ease 0.2s; }
-      #dropbar .uk-container .grid section ul li a:hover {
-        color: #96027E; }
+        font-size: 12px; } }
 
 .show-on-threshold {
   display: none; }
