--- a/GhasreMobile/wwwroot/css/pages/index.css
+++ b/GhasreMobile/wwwroot/css/pages/index.css
@@ -113,7 +113,8 @@ backdrop-filter: saturate(80%);
   display: grid;
   grid-template-rows: auto;
   grid-gap: 8px;
-  grid-template-columns: repeat(auto-fit, minmax(224px, 1fr)); }
+  grid-template-columns: repeat(auto-fit, minmax(224px, 1fr));
+  margin-bottom: 16px; }
   .gallery-grid .grid a {
     display: flex;
     width: 100%; }
@@ -128,8 +129,26 @@ backdrop-filter: saturate(80%);
       border-radius: 4px 4px 4px 4px;
       margin: auto; }
 
+@media only screen and (max-width: 960px) {
+  .gallery-grid .grid {
+    display: grid;
+    grid-template-rows: auto;
+    grid-gap: 8px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); }
+    .gallery-grid .grid a img {
+      max-height: 164px; }
+    .gallery-grid .grid a:nth-child(n+5) {
+      display: none; }
+      .gallery-grid .grid a:nth-child(n+5) img {
+        display: none; } }
+
 .service .body {
   display: grid; }
+
+.questions h3 {
+  font-size: 20px;
+  padding: 12px;
+  margin-top: 0 !important; }
 
 .questions ul li {
   margin-top: 0 !important;
@@ -140,6 +159,32 @@ backdrop-filter: saturate(80%);
   @media only screen and (max-device-width: 420px) {
     .questions ul li {
       padding: 8px; } }
+  .questions ul li .uk-accordion-title {
+    font-size: 16px !important; }
+  .questions ul li .uk-accordion-content {
+    margin-top: 10px !important;
+    font-size: 13px !important; }
+
+@media only screen and (max-width: 480px) {
+  .questions h3 {
+    font-size: 17px;
+    margin-top: 0 !important; }
+  .questions ul li {
+    margin-top: 0 !important;
+    border-bottom: solid #e9e9e9 1px; } }
+  @media only screen and (max-width: 480px) and (min-device-width: 420px) {
+    .questions ul li {
+      padding: 12px; } }
+  @media only screen and (max-width: 480px) and (max-device-width: 420px) {
+    .questions ul li {
+      padding: 8px; } }
+
+@media only screen and (max-width: 480px) {
+    .questions ul li .uk-accordion-title {
+      font-size: 14px !important; }
+    .questions ul li .uk-accordion-content {
+      margin-top: 8px !important;
+      font-size: 12px !important; } }
 
 .main-contact {
   display: grid;
