productController.cs and stock and index in product in admin

--- a/GhasreMobile/wwwroot/AdminStaticFile/style.css
+++ b/GhasreMobile/wwwroot/AdminStaticFile/style.css
@@ -1835,3 +1835,8 @@ table.hot-download td {
     overflow: hidden;
     text-align: center;
 }
+.uk-notification-close {
+    text-align: right !important;
+    color: #fff !important;
+    margin-right:8px!important;
+}
