--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -37,6 +37,7 @@
                                 <th>قیمت</th>
                                 <th>تاریخ افزودن</th>
                                 <th>عملیات</th>
+                                <th>وضعیت موجودی</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -61,6 +62,11 @@
                                             <a href="#" class="text-primary" uk-icon="create-outline"></a>
                                         </span>
                                     </td>
+                                    <td>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="وضعیت موجودی">
+                                            <a id="Stock" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="help-circle-outline"></a>
+                                        </span>
+                                    </td>
                                 </tr>
                             }
                         </tbody>
@@ -76,3 +82,17 @@
         </div>
     </div>
 </div>
+
+
+@section Script{
+    <script>
+
+        $("#Stock").click(function () {
+            $(".modal-content").html("");
+            $.get("/Admin/Product/Stock", function (result) {
+                $(".modal-content").html(result);
+            });
+        });
+
+    </script>
+}
