--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -186,6 +186,8 @@
 <script src="~/js/uikit-icons.js"></script>
 <link href="~/AdminStaticFile/DataPicker/jquery.md.bootstrap.datetimepicker.style.css" rel="stylesheet" />
 <script src="~/AdminStaticFile/script.js"></script>
+<script src="~/js/ckeditor/ckeditor.js"></script>
+<script src="~/js/ckeditor/adapters/jquery.js"></script>
 <script>
     $(".LoadingDiv").click(function () {
         $("#overlay").fadeIn(300);
